src/client/Box/components/Writer/index.scss
.writer {
  height: calc(100% - 10px);
  margin-top: 5px;
  padding-top: 1rem;
  padding-right: calc(1rem + 50px);

  span {
    white-space: nowrap;
  }

  &.shadow {
    box-shadow: rgb(0 0 0 / 10%) -10px 10px 10px 10px;
  }

  .margin_box {
    margin-top: 0.3rem;
    margin-bottom: 0.5rem;
  }

  iframe {
    border: none;
    background-color: white;
  }

  .attachment {
    z-index: 11;
    position: relative;
    overflow: hidden;
    transition: 150ms;
    white-space: nowrap;
    padding: 0.4rem;

    &:first-child {
      margin-top: 0.3rem;
    }

    &:not(:last-child) {
      margin-bottom: 0.3rem;
    }

    svg {
      margin-right: 0.3rem;
    }

    span {
      font-weight: normal;
    }
  }

  .fieldName {
    display: flex;
    justify-content: space-between;
    font-size: 16px;
    height: 20px;
  }

  .helper-text {
    font-size: 16px;
  }

  .from_address {
    margin: 0.2rem 0;
    display: inline-block;
    min-width: 210px;
  }

  input.writer-short {
    width: max(90px, 20vw);
    max-width: 200px;
  }

  input.writer-long {
    width: 100%;
    text-align: left;
    transition: 150ms;
  }

  input.writer-long.hide {
    display: block;
    width: 0;
  }

  .inputBox-flex {
    display: flex;
    justify-content: flex-start;
    align-items: center;

    > :nth-child(2) {
      margin-left: 0.5rem;
      margin-right: 0.5rem;
    }
  }

  .writer-body {
    height: calc(100% - 16rem);

    .writer-content-wrap {
      display: flex;
      flex-direction: column;
      width: 100%;
      height: calc(100% - 0.5rem - 20px);

      .writer-content {
        padding: 0 0.5rem;
        height: 100%;
        border-radius: 3px;
        position: relative;
        height: 100%;
        cursor: text;
        overflow-y: scroll;

        .editor_container_bottom_padding {
          min-height: 100%;

          .original_message {
            border-radius: 3px;
            padding: 14px 0 4px 15px;
            margin-top: 10px;
            margin-left: 5px;

            .subject {
              font-size: 20px;
            }

            blockquote {
              border-left: 1px solid #cccccc;
              padding: 0.5rem 0 0.5rem 0.5rem;
              margin-left: 0.5rem;
              overflow-wrap: break-word;
              overflow: hidden;
            }
          }
        }
      }
    }
  }

  .writer-buttons {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-top: 1rem;

    button {
      margin: 0 0.5rem;
      display: inline-flex;
      justify-content: center;
      align-items: center;
      width: 150px;
      height: 35px;
      font-size: 16px;

      svg {
        margin-right: 0.5rem;
      }
    }
  }

  .ProseMirror {
    * {
      font-weight: normal;
    }

    p,
    ul,
    ol {
      margin-top: 0.5rem;
      margin-bottom: 0.5rem;
    }

    blockquote {
      margin: 10px 0 10px 0;
      padding: 0 0 0 0.5rem;
      border-left: 5px solid #888;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      font-weight: bolder;
    }

    code {
      background-color: #eee;
      color: #c50;
      border-radius: 2px;
    }

    pre {
      background-color: #444;
      color: #fff;
      border-radius: 3px;
      padding: 0.5rem;

      code {
        color: inherit;
        background: none;
        padding: 0;
      }
    }
  }
}

